# vcfilter

./: Cargo.toml  README.md
src/: args.rs  coveragefilter.rs  coveragefilter_with_variant.rs  defaultfilter.rs  defaultfilter_with_variant.rs  hashvariants.rs  main.rs  meanvariant.rs  qualityfilter.rs  qualityfilter_with_variant.rs  variantstats.rs  variantstruct.rs  zygosityfilter.rs  zygosityfilter_with_variant.rs
