[package]
name = "vcfilter"
version = "0.3.0"
edition = "2024"
readme = "README.md"
license = "MIT"
authors = ["Gaurav Sablok <codeprog@icloud.com>"]
description = "vcfilter for human genomics"
homepage = "https://github.com/omicscode/vcfilter"
repository = "https://github.com/omicscode/vcfilter"

[dependencies]
async-std = "1.13.1"
clap = { version = "4.5.39", features = ["derive"] }
figlet-rs = "0.1.5"
